force-app/main/default/objects/Technician__c/fields/Employee_ID__c.field-meta.xml
<CustomField>
    <fullName>Employee_ID__c</fullName>
    <label>Employee ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>